--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <div id="calcBody">
       <div id="result"></div>
-      <div>
+      <div class="input">
         <input id="input" type="text">
       </div>
       <div id="buttons">
